sonarqube/sonarqube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: sonarqube
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9000
  selector:
    app: sonarqube
