sonarqube/sonarqube_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Enabling SSL redirect
spec:
  ingressClassName: nginx  # Ingress class definition
  tls:
  - hosts:
    - sonar.irys-dev.com
    secretName: tls-secret
  rules:
  - host: sonar.irys-dev.com  # Replace with your domain
    http:
      paths:
      - path: /sonarqube
        pathType: Prefix
        backend:
          service:
            name: sonarqube-service
            port:
              number: 9000
